# english-reading-comprehension-trainer

./: .gitignore  AGENTS.md  Makefile  README.md  STATUS.md
english-reading-trainer/: .coverage  .env.example  coverage.xml  pyproject.toml
english-reading-trainer/app/: cli_entry.py  db_connection.py  db_models.py
english-reading-trainer/data/: .gitkeep  reading_trainer.before-mastering-bitcoin-chapter-renumber.20260615232804.db  reading_trainer.before-mastering-bitcoin-media-reimport.20260616000000.db  reading_trainer.before-mastering-bitcoin-reimport.20260615230349.db  reading_trainer.db
english-reading-trainer/migrations/: 001_initial_schema.sql  002_seed_error_types.sql  003_archive_cards.sql  004_sentence_user_translation.sql  005_chapter_section_metadata.sql  006_epub_assets_and_blocks.sql  007_pdf_source_format.sql  008_word_card_sources.sql  009_inference_error_layer.sql  010_sentence_user_structure.sql  011_ai_cache_input_snapshot.sql  012_word_card_diagnosis.sql
english-reading-trainer/prompts/: profile_summary.v1.md  sentence_analysis.v1.md  sentence_analysis_diagnose.v1.md  sentence_analysis_diagnose.v2.md  sentence_analysis_diagnose.v3.md  sentence_analysis_diagnose.v4.md  sentence_analysis_diagnose.v5.md  sentence_analysis_diagnose.v6.md  sentence_analysis_predict.v1.md  sentence_analysis_predict.v2.md  sentence_analysis_predict.v3.md  sentence_analysis_predict.v4.md  sentence_analysis_predict.v5.md  sentence_analysis_predict.v6.md  word_analysis.v1.md  word_analysis.v2.md  word_analysis.v3.md  word_analysis.v4.md  word_analysis.v5.md
english-reading-trainer/scripts/: export_takeaways.py
english-reading-trainer/tests/: test_cli_entry.py  test_db_connection.py  test_db_models.py  (+1 more)
(+163 files in other folders)
