[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "english-reading-trainer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "spacy>=3.7",
    "pysbd>=0.3",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "jsonschema>=4.21",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
